k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stateful
  namespace: ecommerce-argocd
spec:
  serviceName: postgres-stateful
  replicas: 1

  selector:
    matchLabels:
      app: postgres-stateful

  template:
    metadata:
      labels:
        app: postgres-stateful
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 5Gi
